--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -125,7 +125,7 @@ float: right;
 
 .headerPics{
   position: relative;
-  
+
 
 }
 
@@ -251,9 +251,14 @@ text-align: center;
   font-size: 35px;
   margin-top: 50px;
   position: static;
-
-
 }
+
+
+  .home-txt{
+    text-align: justify;
+
+  }
+
 
 
 @media (min-width: 992px) {
