--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -266,3 +266,145 @@ text-align: center;
     padding-top: 56px;
   }
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .service_container{
+      margin-left: 0%;
+      text-align: left;
+      .margin-right: 10px;
+    }
+    .main-logo{
+      top: 20%;
+      left: 40%;
+    }
+
+    /*.mt-4{
+      width: 30%;
+    }*/
+  }
+
+  @media only screen and (max-width: 400px) {
+    .business-header{
+    margin-bottom: -40%;
+  }
+    .btn{
+      font-size: 15px;
+    }
+    }
+
+
+  @media only screen and (min-width: 401px) and (max-width: 465px){
+    .business-header{
+     margin-bottom: -30%;
+  }
+  .btn{
+    font-size: 15px;
+  }
+
+    }
+
+    @media only screen and (min-width: 465px) and (max-width: 515px){
+      .business-header{
+       margin-bottom: -22%;
+    }
+    .btn{
+      font-size: 15px;
+    }
+
+      }
+
+
+      @media only screen and (min-width: 515px) and (max-width: 650px){
+        .business-header{
+         margin-bottom: -18%;
+      }
+      .btn{
+        font-size: 15px;
+      }
+      .service_container {
+        margin-left: 0%;
+        text-align: left;
+        }
+        /*p{
+          width: 150%;
+        }*/
+
+        }
+
+        @media only screen and (min-width: 576px) and (max-width: 991px){
+          p{
+            width: 150%;
+          }
+        }
+
+
+
+
+        @media only screen and (min-width: 650px) and (max-width: 750px){
+          .business-header{
+           margin-bottom: -15%;
+        }
+        .btn{
+          font-size: 20px;
+        }
+
+        .service_container {
+          margin-left: 0%;
+          text-align: left;
+          }
+}
+
+          @media only screen and (min-width: 750px) and (max-width: 850px){
+            .business-header{
+             margin-bottom: -10%;
+          }
+          .btn{
+            font-size: 20px;
+          }
+          .service_container {
+            margin-left: 0%;
+            text-align: left;
+            }
+
+            }
+
+
+            @media only screen and (min-width: 768px) and (max-width: 850px){
+              .business-header{
+               margin-bottom: -5%;
+            }
+            .btn{
+              font-size: 20px;
+            }
+            .service_container {
+              margin-left: 0%;
+              text-align: left;
+              }
+
+              }
+
+              @media only screen and (min-width: 850px) and (max-width: 991px){
+                .business-header{
+                 margin-bottom: -5%;
+              }
+              .btn{
+                font-size: 20px;
+              }
+              .service_container {
+                margin-left: 0%;
+                text-align: left;
+                }
+
+                }
+
+
+
+  /*@media only screen and (min-width: 600px) {
+    .business-header{
+    margin-bottom: -20%;
+    }
+    .da-back-button{
+      bottom: 80%;
+    }
+  }*/
